compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__const_multiple_errors_invalid_unannotated_value.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1464
expression: "const invalid_unannotated_value = [1, 2.0]\nconst invalid_everything: MyInvalidType = MyInvalidValue"
snapshot_kind: text
---
----- SOURCE CODE
const invalid_unannotated_value = [1, 2.0]
const invalid_everything: MyInvalidType = MyInvalidValue

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:39
  │
1 │ const invalid_unannotated_value = [1, 2.0]
  │                                       ^^^

Expected type:

    Int

Found type:

    Float

error: Unknown type
  ┌─ /src/one/two.gleam:2:27
  │
2 │ const invalid_everything: MyInvalidType = MyInvalidValue
  │                           ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.

error: Unknown variable
  ┌─ /src/one/two.gleam:2:43
  │
2 │ const invalid_everything: MyInvalidType = MyInvalidValue
  │                                           ^^^^^^^^^^^^^^

The custom type variant constructor `MyInvalidValue` is not in scope here.
