compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_alias_names.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1108
expression: type X = Int type X = Int
snapshot_kind: text
---
----- SOURCE CODE
type X = Int type X = Int

----- ERROR
error: Duplicate type definition
  ┌─ /src/one/two.gleam:1:14
  │
1 │ type X = Int type X = Int
  │ ------------ ^^^^^^^^^^^^ Redefined here
  │ │             
  │ First defined here

The type `X` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
