compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_constructors3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1102
expression: "type Boxy { Box(Int) Box(Float) }"
snapshot_kind: text
---
----- SOURCE CODE
type Boxy { Box(Int) Box(Float) }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:22
  │
1 │ type Boxy { Box(Int) Box(Float) }
  │             -------- ^^^^^^^^^^ Redefined here
  │             │         
  │             First defined here

`Box` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
