compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_fn_const.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1218
expression: "fn wibble() { 1 }\nconst wibble = 2"
snapshot_kind: text
---
----- SOURCE CODE
fn wibble() { 1 }
const wibble = 2

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:2:1
  │
1 │ fn wibble() { 1 }
  │ ----------- First defined here
2 │ const wibble = 2
  │ ^^^^^^^^^^^^ Redefined here

`wibble` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
